--- a/ipad/package.json
+++ b/ipad/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
+    "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
